[gd_scene load_steps=16 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://assets/32-32_white.png" type="Texture" id=2]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 80, 80 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.609375, 0.609375, 0.609375, 1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 40, 0.1, 40 )

[sub_resource type="SphereMesh" id=4]
radius = 3.0
height = 6.0

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true

[sub_resource type="CapsuleShape" id=6]
radius = 1.2
height = 9.0

[sub_resource type="BoxShape" id=7]
extents = Vector3( 0.8, 0.2, 0.8 )

[sub_resource type="ProceduralSky" id=8]
radiance_size = 4
sky_top_color = Color( 0.472656, 0.704064, 1, 1 )
sky_horizon_color = Color( 0.24147, 0.469106, 0.824219, 1 )
sky_curve = 0.25
ground_bottom_color = Color( 0.0280151, 0.0804138, 0.132812, 1 )
ground_horizon_color = Color( 0.138657, 0.367696, 0.910156, 1 )
ground_curve = 0.01
sun_color = Color( 1, 0.932556, 0.867188, 1 )
sun_energy = 16.0

[sub_resource type="Environment" id=9]
background_mode = 2
background_sky = SubResource( 8 )
ambient_light_color = Color( 1, 0.934814, 0.90625, 1 )
ambient_light_sky_contribution = 0.6
fog_height_min = 0.0
fog_height_max = 100.0
tonemap_mode = 3
ssao_enabled = true
ssao_light_affect = 1.0
dof_blur_far_distance = 24.0
dof_blur_far_amount = 0.08
glow_enabled = true
glow_levels/1 = true
glow_levels/2 = true
glow_levels/5 = false
glow_intensity = 1.0
glow_strength = 1.1
glow_blend_mode = 0
glow_bicubic_upscale = true
adjustment_enabled = true

[sub_resource type="SphereMesh" id=26]

[sub_resource type="SpatialMaterial" id=28]
albedo_color = Color( 0.992157, 1, 0, 1 )

[sub_resource type="SpatialMaterial" id=27]
albedo_color = Color( 0.027451, 0.898039, 0.988235, 1 )

[sub_resource type="SpatialMaterial" id=29]
albedo_color = Color( 0.996078, 0.168627, 0.0313726, 1 )

[node name="Testing_Area" type="Spatial"]

[node name="Box" type="Spatial" parent="."]

[node name="Floor_plane" type="MeshInstance" parent="Box"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.192724, 1.90735e-06, 0.00487137 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="StaticBody" type="StaticBody" parent="Box/Floor_plane"]

[node name="CollisionShape" type="CollisionShape" parent="Box/Floor_plane/StaticBody"]
shape = SubResource( 3 )

[node name="Celing_plane" type="MeshInstance" parent="Box"]
transform = Transform( 1, 0, 0, 0, -1, 3.25841e-07, 0, -3.25841e-07, -1, 0, 75.2188, 0 )
cast_shadow = 2
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="StaticBody" type="StaticBody" parent="Box/Celing_plane"]

[node name="CollisionShape" type="CollisionShape" parent="Box/Celing_plane/StaticBody"]
shape = SubResource( 3 )

[node name="Wall_1" type="MeshInstance" parent="Box"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, -0.640566, 37.0752, 39.6568 )
cast_shadow = 2
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="StaticBody" type="StaticBody" parent="Box/Wall_1"]

[node name="CollisionShape" type="CollisionShape" parent="Box/Wall_1/StaticBody"]
shape = SubResource( 3 )

[node name="Wall_2" type="MeshInstance" parent="Box"]
transform = Transform( -1.62921e-07, -1, 0.000345306, 0, 0.000345306, 1, -1, 1.62921e-07, -5.62574e-11, 38.2511, 37.0752, 0.0846462 )
cast_shadow = 2
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="StaticBody" type="StaticBody" parent="Box/Wall_2"]

[node name="CollisionShape" type="CollisionShape" parent="Box/Wall_2/StaticBody"]
shape = SubResource( 3 )

[node name="Wall_3" type="MeshInstance" parent="Box"]
transform = Transform( -1.62921e-07, 1, -0.000488118, 0, 0.000488118, 1, 1, 1.62921e-07, -7.95246e-11, -40.2198, 37.0752, 0.0846462 )
cast_shadow = 2
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="StaticBody" type="StaticBody" parent="Box/Wall_3"]

[node name="CollisionShape" type="CollisionShape" parent="Box/Wall_3/StaticBody"]
shape = SubResource( 3 )

[node name="Wall_4" type="MeshInstance" parent="Box"]
transform = Transform( -1, 3.25841e-07, 5.30863e-14, 0, -1.62921e-07, 1, 3.25841e-07, 1, 1.62921e-07, -0.569376, 37.0752, -37.7189 )
cast_shadow = 2
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="StaticBody" type="StaticBody" parent="Box/Wall_4"]

[node name="CollisionShape" type="CollisionShape" parent="Box/Wall_4/StaticBody"]
shape = SubResource( 3 )

[node name="OmniLight" type="OmniLight" parent="Box"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 42.005, 0 )
shadow_enabled = true
shadow_bias = 0.4
omni_range = 60.0

[node name="MeshInstance" type="MeshInstance" parent="Box/OmniLight"]
cast_shadow = 0
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="Player" type="KinematicBody" parent="."]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Body_CollisionShape" type="CollisionShape" parent="Player"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 5.81098, 0 )
shape = SubResource( 6 )

[node name="Feet_CollisionShape" type="CollisionShape" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.493176, 0 )
shape = SubResource( 7 )

[node name="RayCast" type="RayCast" parent="Player/Feet_CollisionShape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.100211, 0 )
enabled = true

[node name="Rotation_Helper" type="Spatial" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 11.239, 0 )

[node name="Camera" type="Camera" parent="Player/Rotation_Helper"]
transform = Transform( -1, 0, 3.25841e-07, 0, 1, 0, -3.25841e-07, 0, -1, 0, -0.307539, -0.0646362 )
current = true
fov = 90.0
far = 180.0

[node name="HUD" type="Control" parent="Player"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoHUD" type="Control" parent="Player/HUD"]
margin_left = 1.0
margin_top = 1.0
margin_right = 1.0
margin_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position" type="Label" parent="Player/HUD/InfoHUD"]
margin_right = 130.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "TEst123ferretman"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rotation" type="Label" parent="Player/HUD/InfoHUD"]
margin_top = 15.0
margin_right = 130.0
margin_bottom = 29.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "TEst123ferretman"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scale" type="Label" parent="Player/HUD/InfoHUD"]
margin_top = 30.0
margin_right = 130.0
margin_bottom = 44.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "TEst123ferretman"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gravity" type="Label" parent="Player/HUD/InfoHUD"]
margin_top = 45.0
margin_right = 130.0
margin_bottom = 59.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "TEst123ferretman"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IsFrozen" type="Label" parent="Player/HUD/InfoHUD"]
margin_top = 60.0
margin_right = 130.0
margin_bottom = 74.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "TEst123ferretman"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Distance" type="Label" parent="Player/HUD/InfoHUD"]
margin_top = 75.0
margin_right = 130.0
margin_bottom = 89.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "TEst123ferretman"

[node name="Crosshair" type="Control" parent="Player/HUD"]
modulate = Color( 1, 1, 1, 0.705882 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -21.0
margin_top = -21.0
margin_right = 21.0
margin_bottom = 21.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom_IMG" type="TextureRect" parent="Player/HUD/Crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2.5
margin_top = 4.5
margin_right = 2.5
margin_bottom = 20.5
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top_IMG" type="TextureRect" parent="Player/HUD/Crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2.5
margin_top = -20.5
margin_right = 2.5
margin_bottom = -4.5
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left_IMG" type="TextureRect" parent="Player/HUD/Crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -4.5
margin_top = -2.5
margin_right = 0.5
margin_bottom = 12.5
rect_rotation = 90.0
texture = ExtResource( 2 )
expand = true

[node name="Right_IMG" type="TextureRect" parent="Player/HUD/Crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 19.5
margin_top = -2.5
margin_right = 24.5
margin_bottom = 12.5
rect_rotation = 90.0
texture = ExtResource( 2 )
expand = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 9 )

[node name="PointHelpers" type="Spatial" parent="."]
visible = false

[node name="PointHelper2" type="MeshInstance" parent="PointHelpers"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.410652, 16.241, 85.8257 )
mesh = SubResource( 26 )
material/0 = SubResource( 28 )

[node name="PointHelper" type="MeshInstance" parent="PointHelpers"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.410652, 16.241, 85.8257 )
mesh = SubResource( 26 )
material/0 = SubResource( 27 )

[node name="PointHelper3" type="MeshInstance" parent="PointHelpers"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.410652, 16.241, 85.8257 )
mesh = SubResource( 26 )
material/0 = SubResource( 29 )

[node name="Objects" type="Spatial" parent="."]
